--- a/Web/Extension/Firefox/autorefresh_manifestv2/manifest.json
+++ b/Web/Extension/Firefox/autorefresh_manifestv2/manifest.json
@@ -12,6 +12,11 @@
     "activeTab"
   ],
   "browser_action": {
-    "default_title": "Start Auto Refresh"
+    "default_title": "Start Auto Refresh",
+    "default_icon": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    }
   }
 }
