--- a/Linux/tmux.conf
+++ b/Linux/tmux.conf
@@ -18,5 +18,5 @@ set -g status-interval 60
 
 set -g status-left '#[fg=green]#H '
 set -g status-right-length 100
-set -g status-right '#(~/.tmux/root_space.sh)|#(~/.tmux/cpu.sh)|#(~/.tmux/ram.sh)|#(~/.tmux/check_ip.sh)|#[fg=cyan]%H:%M%Z[#[fg=yellow]%a]#[fg=blue]%d/%m/%Y'
+set -g status-right '#(~/.tmux/sysstats.sh)|#[fg=cyan]%H:%M%Z[#[fg=yellow]%a]#[fg=blue]%d/%m/%Y'
 
